# granola-mcp

./: README.md  RELEASING.md  pyproject.toml
src/granola_mcp/: __init__.py  __main__.py  server.py
tests/: test_list_filters.py  test_transcript_attribution.py
